# locic

./: .clang-format  .gitmodules  .travis.yml  CMakeLists.txt  ELKHOUND  LICENSE  README  README.md  index.html  locic.cbp  locic.depend  locic.layout  params.json  runtime.cbp  runtime.layout
Locic/CodeGen/: ArgInfo.hpp  CMakeLists.txt  CodeGen.cpp  CodeGen.hpp  ConstantGenerator.hpp  Destructor.cpp  Destructor.hpp  Function.hpp  GenStatement.cpp  GenStatement.hpp  GenType.cpp  GenTypeInstance.hpp  GenValue.cpp  GenValue.hpp  Interpreter.cpp  Interpreter.hpp  Mangling.hpp  Module.hpp  Primitives.cpp  SizeOf.cpp  Support.cpp  TypeSizeKnowledge.hpp  VTable.cpp  VTable.hpp  VirtualCall.hpp
docs/: AlgebraicDatatypes.rst  AssertStatement.rst  CMakeLists.txt  CircularQueue.odg  ClassInheritance.rst  Classes.rst  CompatibilityWithC.rst  CompilerDesign.rst  Concurrency.rst  ConcurrencyAndParallelism.rst  Const.rst  Containers.rst  ControlFlow.rst  DynamicDispatch.rst  Exceptions.rst  FunctionOverloading.rst  GarbageCollection.rst  GettingStarted.rst  Hashing.rst  HeapMemoryManagement.rst  ImplicitOperations.rst  InteractingWithC++.rst  LLVMIntro.rst  Language Design.tex  LanguageDesign.tex  LanguageGoals.rst  LifetimeMethods.rst  LinkedList.odg  Literals.rst  LociCompilationModel.odg  LvaluesAndRvalues.rst  Map.odg  Module Loading.tex  ModuleLoading.tex  Modules.rst  MoveVersusCopy.rst  MultiPassCompilation.rst  NameMangling.rst  NamedParameters.rst  ObjectMemoryStates.rst  (+21 more)
docs/proposals/: AtomicOperations.rst  CastingRules.rst  ClassInheritance.rst  ExceptionSpecifications.rst  FutureStandardLibraryModules.rst  ImprovementsToAPIs.rst  InteractingWithC++.rst  LateMoveParameters.rst  MergeTemplateGeneratorsAndVtables.rst  NamedParameters.rst  ObjectProperties.rst  RTTI.rst  RemoveLifetimeMethods.rst  RemoveNonConstTypeTags.rst  SelfConst.rst  StyleRules.rst  VariadicTemplates.rst  Variants.rst  VectorTypes.rst  VirtualTemplateVariables.rst
docs/static/: README
examples/: Array.loci  CMakeLists.txt  ClassExample.loci  Example1.loci
examples/Calculator/: CMakeLists.txt  Calculator.loci
examples/ChainReversi/: CMakeLists.txt  main.loci
examples/CommandLine/: CMakeLists.txt  CommandLine.loci
examples/Events/: CMakeLists.txt  Events.loci  MessageQueue.loci  Threads.loci  main.loci
examples/Exception/: CMakeLists.txt  ExceptionDemo.loci
examples/GUI/: CMakeLists.txt  main.loci
examples/General/: CMakeLists.txt  Example1.loci  Example2.loci
examples/Looper/: CMakeLists.txt  Looper.loci
examples/Network/: CMakeLists.txt  TCP.loci  main.loci
examples/SFML/: CircleShape.loci  Clock.loci  Color.loci  Event.loci  Font.loci  RectangleShape.loci  RenderWindow.loci  Text.loci  Vector.loci  View.loci
examples/Simulations/: CMakeLists.txt  Random.loci  Simulation.loci  SimulationList.loci  Support.loci  Vector.loci  main.loci
examples/SplitModule/: A.loci  B.loci  CMakeLists.txt
lib/: BuiltInTypes.loci  CMakeLists.txt  Log.cpp  Name.cpp  String.cpp  locic.cpp
lib/AST/: Alias.cpp  AliasDecl.cpp  CMakeLists.txt  CatchClause.cpp  ConstSpecifier.cpp  Context.cpp  ExceptionInitializer.cpp  Function.cpp  FunctionDecl.cpp  FunctionType.cpp  GlobalStructure.cpp  IfClause.cpp  MethodSet.cpp  MethodSetElement.cpp  Module.cpp  ModuleScope.cpp  ModuleScopeDecl.cpp  Namespace.cpp  NamespaceDecl.cpp  Predicate.cpp  PredicateDecl.cpp  RequireSpecifier.cpp  Scope.cpp  Statement.cpp  StatementDecl.cpp  StaticAssert.cpp  SwitchCase.cpp  Symbol.cpp  TemplateTypeVar.cpp  TemplateVar.cpp  TemplateVarMap.cpp  Type.cpp  TypeAlias.cpp  TypeDecl.cpp  TypeInstance.cpp  TypeVar.cpp  Value.cpp  ValueDecl.cpp  Var.cpp
lib/CodeGen/: ASTCodeEmitter.cpp  ASTFunctionGenerator.cpp  ArgInfo.cpp  CMakeLists.txt  CallEmitter.cpp  CodeGen.cpp  CodeGenerator.cpp  ConstantGenerator.cpp  Context.cpp  ControlFlow.cpp  Debug.cpp  DefaultMethodEmitter.cpp  DefaultMethods.cpp  Destructor.cpp  Exception.cpp  Function.cpp  FunctionCallInfo.cpp  FunctionTranslationStub.cpp  GenABIType.cpp  GenDebugType.cpp  GenFunction.cpp  GenFunctionCall.cpp  GenStatement.cpp  GenType.cpp  GenTypeInstance.cpp  GenVTable.cpp  GenValue.cpp  GenVar.cpp  IREmitter.cpp  Interface.cpp  InternalContext.cpp  Interpreter.cpp  LLVMIncludes.hpp  Linker.cpp  Liveness.cpp  LivenessEmitter.cpp  LivenessIndicator.cpp  LivenessInfo.cpp  Mangling.cpp  Memory.cpp  (+27 more)
lib/Frontend/: CMakeLists.txt  DiagnosticRenderer.cpp  OptionalDiag.cpp
lib/Lex/: CMakeLists.txt  CharacterReader.cpp  FileCharacterSource.cpp  IdentifierLexer.cpp  Lexer.cpp  StringLiteralLexer.cpp
lib/Parser/: AttributeBuilder.cpp  AttributeParser.cpp  CMakeLists.txt  DefaultParser.cpp  FlexLexer.hpp  FunctionBuilder.cpp  FunctionParser.cpp  LexLexer.hpp  Lexer.hpp  Lexer.l  LexerAPI.hpp  LocationInfo.hpp  NamespaceBuilder.cpp  NamespaceParser.cpp  Parser.y  PredicateBuilder.cpp  PredicateParser.cpp  ScopeParser.cpp  StatementBuilder.cpp  StatementParser.cpp  SymbolBuilder.cpp  SymbolParser.cpp  TemplateBuilder.cpp  TemplateInfo.cpp  TemplateParser.cpp  Token.hpp  TokenReader.cpp  TypeBuilder.cpp  TypeInstanceBuilder.cpp  TypeInstanceParser.cpp  TypeParser.cpp  ValueBuilder.cpp  ValueParser.cpp  VarBuilder.cpp  VarParser.cpp
lib/SEM/: Alias.cpp  (+21 more)
runtime/: CMakeLists.txt  assert.cpp  atomic_t.loci  bool.loci  bool_t.loci  byte_t.loci  callable.loci  castable.loci  comparable.loci  compare.loci  compare_result_t.loci  copyable.loci  count.loci  decrementable.loci  default_constructible.loci  destructible.loci  dissolvable.loci  double_t.loci  dynamic.loci  exception.c  exception.cpp  final_lval.loci  final_lval_t.loci  float_t.loci  function_ptr_t.loci  hashable.loci  incrementable.loci  int16_t.loci  int32_t.loci  int64_t.loci  int8_t.loci  int_t.loci  interfacemethod_t.loci  long_t.loci  longdouble_t.loci  longlong_t.loci  member_lval.loci  method_t.loci  methodfunction_ptr_t.loci  minmax.loci  (+42 more)
stdlib/: CMakeLists.txt
test/: CMakeLists.txt
tests/: CMakeLists.txt
tools/: CMakeLists.txt  loci-test.cpp  loci-vtable.cpp  locic.cpp
unittests/: CMakeLists.txt  TestMain.cpp
(+2369 files in other folders)
